--- a/application/admin/view/index_adminindex.html
+++ b/application/admin/view/index_adminindex.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LaySNS后台管理</title>
+    <title>HTD数字资产-后台管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -24,7 +24,7 @@
             <div class="layui-main">
                 <div class="admin-login-box">
                     <a class="logo" style="left: 0;">
-                        <span style="font-size: 30px;">LaySNS</span>
+                        <span style="font-size: 30px;">HTD</span>
                     </a>
                     <div class="admin-side-toggle">
                         <i class="fa fa-bars" aria-hidden="true"></i>
@@ -37,9 +37,9 @@
                     <li class="layui-nav-item">
                         <a class="update_cache" href="javascript:void(0)">清除缓存</a>
                     </li>
-                    <li class="layui-nav-item">
+                    <!-- <li class="layui-nav-item">
                         <a href="{:routerurl('index/index/index')}" target="_blank">浏览首页</a>
-                    </li>
+                    </li> -->
 
                     <li class="layui-nav-item">
                         <a href="javascript:;" class="admin-header-user">
