修改后台登录页

--- a/application/admin/view/login_index.html
+++ b/application/admin/view/login_index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="login">
 <div class="login">
-<h2>LaySNS后台管理</h2>
+<h2>HTD 后台管理</h2>
 <form class="layui-form">
 <div class="layui-form-item">
 <input type="text" name="username" placeholder="请输入账号" required lay-verify="required" autocomplete="off" class="layui-input">
