--- a/application/admin/view/index_adminindex.html
+++ b/application/admin/view/index_adminindex.html
@@ -24,7 +24,7 @@
             <div class="layui-main">
                 <div class="admin-login-box">
                     <a class="logo" style="left: 0;">
-                        <span style="font-size: 30px;">HTD</span>
+                        <span style="font-size: 30px;">HTD后台系统</span>
                     </a>
                     <div class="admin-side-toggle">
                         <i class="fa fa-bars" aria-hidden="true"></i>
