修改后台页面

--- a/application/admin/view/currency_index.html
+++ b/application/admin/view/currency_index.html
@@ -13,6 +13,7 @@
                         <th>币种名称</th>
                         <th>币种简称</th>
                         <th>当前价格(CNY)</th>
+                        <th>钱包地址(CNY)</th>
                         <th>操作</th>
                     </tr>
                     </thead>
@@ -24,6 +25,7 @@
                         <td>{$vo.name}</td>
                         <td>{$vo.alias_name}</td>
                         <td>{$vo.price}</td>
+                        <td>{$vo.wallet_addr}</td>
                        
                         <td>
                            
