--- a/application/admin/view/currency_index.html
+++ b/application/admin/view/currency_index.html
@@ -14,6 +14,8 @@
                         <th>图标</th>
                         <th>币种名称</th>
                         <th>币种简称</th>
+                        <th>状态</th>
+                        <th>钱包地址</th>
                         <th>当前价格(CNY)</th>
                         <th>币种提示</th>
                         <th>操作</th>
@@ -22,31 +24,28 @@
                     <tbody>
                     {foreach name="currencyData" item="vo"}
                     <tr>
-                        <td>{$vo.id}</td>
-                        <td>{if condition="$vo['log'] eq true"}
-
-                            <img src="/{$vo['log']}" alt="111">
-
-                            {else /}
-
-
-
-                            {/if}
+                        <td>{$i++}</td>
+                        <td>{if condition="$vo['log'] eq true"}<img src="/{$vo['log']}" alt="111">{else /} {/if}
                         </td>
                         <td>{$vo.name}</td>
                         <td>{$vo.alias_name}</td>
+                        <td>{if condition="$vo['status'] eq 1"}显示{else /} 隐藏{/if}
+                        <td>{$vo.wallet_addr}</td>
                         <td>{$vo.price}</td>
                         <td>{$vo.note}</td>
                         <td>
                            
                             <a href="{:url('admin/currency/edit',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">编辑</a>
                             <a  href="{:url('admin/currency/delete',['id'=>$vo['id']])}"   class="elementdel layui-btn layui-btn-danger layui-btn-sm ajax-delete">删除</a>
-                            <a data-method="confirmTrans" class="layui-btn elementdel layui-btn-danger layui-btn-sm ajax-delete">删除</a>
                         </td>
                     </tr>
                     {/foreach}
                     </tbody>
+
                 </table>
+                <div>
+                    {$currencyData->render()}
+                </div>
 	</div>
 		
 			
