--- a/application/admin/view/Income_dynamic_income.html
+++ b/application/admin/view/Income_dynamic_income.html
@@ -5,11 +5,12 @@
             <!--<a href="{:url('admin/user/add')}" class="layui-btn layui-btn-sm" id="add" style="float:left">-->
             <!--<i class="layui-icon">&#xe608;</i> 添加用户-->
             <!--</a>-->
-            <form class="layui-form layui-form-pane" action="{:url('admin/income/index')}" method="get">
+            <form class="layui-form layui-form-pane" action="{:url('admin/income/search')}" method="get">
                 <div class="layui-inline">
                     <label class="layui-form-label">手机号</label>
                     <div class="layui-input-inline">
                         <input type="text" name="keyword" value="{:session('userkeyword')}" placeholder="请输入手机号" class="layui-input">
+                        <input type="hidden" name="act" value="{$act}">
                     </div>
                 </div>
                 <div class="layui-inline">
@@ -32,8 +33,9 @@
                 <th>静态收益</th>
                 <th>主流币收益</th>
                 <th>平台币收益</th>
-                <th>时间</th>、
+                <th>时间</th>
                 <th>收益状态</th>
+                <th>操作</th>
             </tr>
             </thead>
             <tbody>
@@ -41,17 +43,20 @@
             <tr>
                 <td>{$vo.id}</td>
                 <td>{$vo.mobile}--{$vo.username}</td>
-                <td>{$vo.alias_name}&nbsp;&nbsp;&nbsp;{$vo.note}</td>
-                <td>{$vo.price}</td>
+                <td>层级账号</td>
+                <td>{$vo.order_no}</td>
                 <td>投资金额</td>
+                <td>{$vo.alias_name}&nbsp;&nbsp;&nbsp;{$vo.note}</td>
                 <td>{$vo.num}</td>
+                <td>{$vo.percent}</td>
+                <td>静态收益</td>
+                <td>{$vo.main_coin}</td>
+                <td>{$vo.htd_coin}</td>
                 <td>{$vo.create_time|date="Y-m-d H:i:s",###}</td>
-                <td>{$vo.voucher}</td>
-                <td>{$vo.pay_way}</td>
-                <!--<td>-->
-                <!--<a href="{:url('admin/user/edit',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">编辑</a>-->
-                <!--<a href="javascript:;" data-id="{$vo.id}" data-url="{:url('admin/user/delete',['id'=>$vo['id']])}" data-opt="del" class="elementdel layui-btn layui-btn-danger layui-btn-sm ajax-delete">删除</a>-->
-                <!--</td>-->
+                <td>收益状态</td>
+                <td>
+                    <a href="javascript:;" data-id="{$vo.id}" data-url="{:url('admin/Income/check',['id'=>$vo['id']])}" data-opt="check" class="elementcheck layui-btn layui-btn-danger layui-btn-sm ajax-delete">审核</a>
+                </td>
             </tr>
             {/foreach}
             </tbody>
