--- a/application/admin/view/comment_index.html
+++ b/application/admin/view/comment_index.html
@@ -11,10 +11,10 @@
                 <tr>
                     <th width="5%" align="center"><input type="checkbox" name="checkAll" lay-filter="checkAll"></th>
                     <th width="5%" align="center">ID</th>
-                    <th width="30%" align="center">评论内容</th>
-                    <th width="30%" align="center">所属帖子</th>
-                    <th width="10%" align="center">所属会员</th>
-                    <th width="10%" align="center">评论时间</th>
+                    <th width="30%" align="center">反馈内容</th>
+                    <!-- <th width="30%" align="center">所属帖子</th>-->
+                    <th width="10%" align="center">反馈用户</th> 
+                    <th width="10%" align="center">反馈时间</th>
                     <th width="10%" align="center">基本操作</th>
                 </tr>
             </thead>
@@ -27,7 +27,7 @@
                         <a target="_blank" href="{:url('bbs/index/thread',array('id'=>$vo.fid))}">
                             <?php echo mb_substr(strip_tags($vo['content']), 0, 35, 'utf-8');?>...</a>
                     </td>
-                    <td style="padding-left: 20px;"><a target="_blank" href="{:url('bbs/index/thread',array('id'=>$vo.fid))}">{$vo.title}</a></td>
+                    <!-- <td style="padding-left: 20px;"><a target="_blank" href="{:url('bbs/index/thread',array('id'=>$vo.fid))}">{$vo.title}</a></td> -->
                     <td align="center"><a target="_blank" href="{:url('bbs/user/home',array('id'=>$vo.uid))}">{$vo.username}</a></td>
                     <td align="center">{$vo.time|friendlyDate}</td>
                     <td align="center">
