--- a/application/admin/view/user_edit.html
+++ b/application/admin/view/user_edit.html
@@ -30,25 +30,25 @@
                         <input type="text" name="mobile" value="{$user.mobile}" placeholder="（选填）请输入手机" class="layui-input">
                     </div>
                 </div>
-                <div class="layui-form-item">
+                <!-- <div class="layui-form-item">
                     <label class="layui-form-label">积分</label>
                     <div class="layui-input-inline">
                         <input type="number" name="point" value="{$user.point}" placeholder="（选填）请输入整数" class="layui-input">
                     </div>
-                </div>
+                </div> -->
                 <div class="layui-form-item">
                     <label class="layui-form-label">邮箱</label>
                     <div class="layui-input-inline">
                         <input type="email" name="email" value="{$user.usermail}" required lay-verify="required" placeholder="请输入邮箱" class="layui-input">
                     </div>
                 </div>
-                <div class="layui-form-item">
+                <!-- <div class="layui-form-item">
                     <label class="layui-form-label">发文免审</label>
                     <div class="layui-input-inline">
                         <input type="radio" name="developer" value="1" title="启用" {if condition="$user.developer gt 0" } checked="checked" {/if}>
                         <input type="radio" name="developer" value="0" title="禁用" {if condition="$user.developer elt 0" } checked="checked" {/if}>
                     </div>
-                </div>
+                </div> -->
                 <div class="layui-form-item">
                     <label class="layui-form-label">状态</label>
                     <div class="layui-input-inline">
