--- a/application/admin/view/user_index.html
+++ b/application/admin/view/user_index.html
@@ -25,10 +25,10 @@
                     <th>用户名</th>
                     <th>手机</th>
                     <th>状态</th>
-                    <th>发文免审</th>
+                    <!-- <th>发文免审</th> -->
                     <th>创建时间</th>
                     <th>最后登录时间</th>
-                    <th>最后登录IP</th>
+                    <!-- <th>最后登录IP</th> -->
                     <th>操作</th>
                 </tr>
             </thead>
@@ -39,15 +39,13 @@
                     <td>{$vo.username}</td>
                     <td>{$vo.mobile}</td>
                     <td>{php}echo $vo['status']>=1 ? '启用' : '禁用';{/php}</td>
-                    <td align="center">
+                    <!-- <td align="center">
                         <input type="checkbox" lay-skin="switch" lay-text="免审|一般" lay-filter="switchdeveloper" value="{$vo['id']}" {php}echo $vo[ 'developer']==1 ? 'checked' : '';{/php}>
-
-
                         </a>
-                    </td>
+                    </td> -->
                     <td>{$vo.regtime|date="Y-m-d H:i:s",###}</td>
                     <td>{$vo.last_login_time|date="Y-m-d H:i:s",###}</td>
-                    <td>{$vo.last_login_ip}</td>
+                    <!-- <td>{$vo.last_login_ip}</td> -->
                     <td>
                         <a href="{:url('admin/user/edit',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">编辑</a>
                         <a href="javascript:;" data-id="{$vo.id}" data-url="{:url('admin/user/delete',['id'=>$vo['id']])}" data-opt="del" class="elementdel layui-btn layui-btn-danger layui-btn-sm ajax-delete">删除</a>
