--- a/application/admin/view/currency_edit.html
+++ b/application/admin/view/currency_edit.html
@@ -34,7 +34,10 @@
                     <label class="layui-form-label">币种图标</label>
                     <div class="layui-input-inline">
                         <input type="file" name="log" id="file" onchange="checkFileExt(this.value)">
-                        <img src="/{$res['log']}" alt="111" style="width: 100px;height: 100px">
+                        {if $res['log'] eq true}
+                            <img src="/{$res['log']}" alt="111" style="width: 100px;height: 100px">
+                        {else /}
+                        {/if}
                     </div>
                 </div>
                 <div class="layui-form-item">
