--- a/application/admin/view/currency_index.html
+++ b/application/admin/view/currency_index.html
@@ -2,6 +2,17 @@
 <link rel="stylesheet" href="//res.layui.com/layui/dist/css/layui.css"  media="all">
 {block name="body"}
 
+<form class="layui-form layui-form-pane" action="{:url('admin/currency/index')}" method="get">
+    <div class="layui-inline">
+        <label class="layui-form-label">币种名称</label>
+        <div class="layui-input-inline">
+            <input type="text" name="name" value="" placeholder="请输入币种名称" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-inline">
+        <button class="layui-btn  layui-btn-sm">搜索</button>
+    </div>
+</form>
 <div class="admin-main">
 <div class="layui-field-box layui-form">
 				<a href="{:url('admin/currency/add')}" class="layui-btn layui-btn-sm" id="add">
