--- a/application/admin/view/currency_index.html
+++ b/application/admin/view/currency_index.html
@@ -6,7 +6,7 @@
     <div class="layui-inline">
         <label class="layui-form-label">币种名称</label>
         <div class="layui-input-inline">
-            <input type="text" name="name" value="" placeholder="请输入币种名称" class="layui-input">
+            <input type="text" name="name" value="{$names}" placeholder="请输入币种名称" class="layui-input">
         </div>
     </div>
     <div class="layui-inline">
