--- a/application/admin/view/Income_static_income.html
+++ b/application/admin/view/Income_static_income.html
@@ -34,7 +34,6 @@
                 <th>平台币收益</th>
                 <th>时间</th>
                 <th>收益状态</th>
-                <th>操作</th>
             </tr>
             </thead>
             <tbody>
@@ -46,15 +45,12 @@
                 <td>投资金额</td>
                 <td>{$vo.alias_name}&nbsp;&nbsp;&nbsp;{$vo.note}</td>
                 <td>{$vo.num}</td>
-                <td>{$vo.percent}</td>
+                <td>{$vo.percent}%</td>
                 <td>静态收益</td>
                 <td>{$vo.main_coin}</td>
                 <td>{$vo.htd_coin}</td>
                 <td>{$vo.create_time|date="Y-m-d H:i:s",###}</td>
                 <td>收益状态</td>
-                <td>
-                    <a href="javascript:;" data-id="{$vo.id}" data-url="{:url('admin/Income/check',['id'=>$vo['id']])}" data-opt="check" class="elementcheck layui-btn layui-btn-danger layui-btn-sm ajax-delete">审核</a>
-                </td>
             </tr>
             {/foreach}
             </tbody>
