--- a/template/c_default/html/index_index.html
+++ b/template/c_default/html/index_index.html
@@ -33,48 +33,48 @@
         <div class="nav-wrap-zp">
             <ul>
                 <li class="itemColor-1">
-                    <a href="__PUBLIC__/wallet/wallet.html">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>投资</span>
                         <!-- <span>26035.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-2">
-                    <a href="totalRevenue_zp.html">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/Profit-icon@2x.png" alt="">
                         <span>总收益</span>
                         <!-- <span>265.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-3">
-                    <a href="#">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/Today's earnings-icon@2x.png" alt="">
                         <span>今日收益</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-4">
-                    <a href="#">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/wallet-icon@2x.png" alt="">
                         <span>钱包余额</span>
                         <!-- <span>135.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-5">
-                    <a href="./qrcode/qrcode.html">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/share-icon@2x.png" alt="">
                         <span>分享</span>
                     </a>
                 </li>
                 <li class="itemColor-6">
-                    <a href="directDrive.html">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>团队</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-7">
-                    <a href="present.html">
+                    <a href="{:url('Invest/index_ylf')}">
                         <img src="__PUBLIC__/images/home/withdraw-money-icon@2x.png" alt="">
                         <span>提币</span>
                         <!-- <span>35.00</span> -->
