--- a/template/c_default/html/index_index.html
+++ b/template/c_default/html/index_index.html
@@ -54,14 +54,14 @@
                     </a>
                 </li>
                 <li class="itemColor-4">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="{:url('Wallet/wallet')}">
                         <img src="__PUBLIC__/images/home/wallet-icon@2x.png" alt="">
                         <span>钱包余额</span>
                         <!-- <span>135.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-5">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="{:url('Index/qrcode')}">
                         <img src="__PUBLIC__/images/home/share-icon@2x.png" alt="">
                         <span>分享</span>
                     </a>
